Grace/tests/gibbs/errors/t048.grace
// ERROR = P1032
method [ {
    print "Hello"
}
